--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -1,7 +1,11 @@
 {% extends 'index.html' %}
 
 {% block body %}
-    <div>
+    <div class="container-fluid">
     <span class="">Dashboard</span>
+        <div id="applications_container" class="position-relative translate-middle-x start-50">
+            {% include 'debt_manager/debt_manager_card.html' %}
+        </div>
+        
     </div>
 {% endblock %}
