--- a/templates/debt_manager/edit_debt.html
+++ b/templates/debt_manager/edit_debt.html
@@ -5,35 +5,39 @@
         <form method="post" id="edit_debt_form">{% csrf_token %}
             <div class="m-2 me-2">
                 <label>Фамилия
-                    <input class="form-control" name="last_name" type="text" value="{{ technic.title }}" required/>
+                    <input class="form-control" name="last_name" type="text" value="{{ debtor.last_name }}" required/>
                 </label>
 
                 <label class="">Имя
-                    <input class="form-control" name="first_name" type="text" value="{{ technic.type }}" required/>
+                    <input class="form-control" name="first_name" type="text" value="{{ debtor.first_name }}" required/>
                 </label>
             </div>
         
             <div class="m-2">
                 <label class="">Название
-                    <input class="form-control" name="title" type="text" value="{{ title }}"/>
+                    <input class="form-control" name="title" type="text" 
+                           value="{% if debt.title %}{{ debt.title }}{% endif %}"/>
                 </label>
                 <label class="w-100">Описание
-                    <textarea class="form-control" name="description">{{ technic.description }}</textarea>
+                    <textarea class="form-control" name="description">{{ debt.description }}</textarea>
                 </label>
                 
             </div>
         
             <div class="m-2">
                 <label class="">Сумма
-                    <input class="form-control" name="amount" type="number" value="{{ amount }}"/>
+                    <input class="form-control" name="amount" type="number" step="0.01" min="0" value="{{ debt.amount }}"/>
                 </label>
 
                 <label class="ms-2">Валюта
                     <select name="currency" class="form-control">
                     
                         {% for currency in currency_list.items %}
-                            
-                                <option value="{{ currency.0 }}">{{ currency.1 }}</option>
+                                {% if debt.currency == currency.1 %}
+                                    <option selected value="{{ currency.0 }}">{{ currency.1 }}</option>
+                                {% else %}
+                                    <option value="{{ currency.0 }}">{{ currency.1 }}</option>
+                                {% endif %}
                             
                         {% endfor %}
                     
@@ -43,10 +47,19 @@
         
             <div class="m-2">
                 <label>Дата создания
-                    <input class="form-control" name="date_start" type="datetime-local" value="{{ technic.id_information }}"/>
+                    <input class="form-control" name="date_start_date" type="date" 
+                           value="{% if debt %}{{ debt.date_start_date.isoformat }}{% else %}{{ TODAY.isoformat }}{% endif %}"/>
                 </label>
+                <label class="ms-2">Время создания
+                    <input class="form-control" name="date_start_time" type="time" 
+                           value="{% if debt %}{{ debt.date_start_time }}{% else %}{{ NOW }}{% endif %}"/>
+                </label>
+                
+            </div>
+            <div class="m-2">
                 <label>Конечная дата
-                    <input class="form-control" name="date_end" type="date" value="{{ technic.id_information }}"/>
+                    <input class="form-control" name="date_end" type="date" 
+                           value="{{ debt.date_end.isoformat }}"/>
                 </label>
             </div>
             
@@ -55,7 +68,7 @@
                 {% if technic.id %}
                     <span><a href="#" class="btn btn-sm btn-outline-danger" style="float: left">Удалить</a></span>
                 {% endif %}
-            <span><a href="#" style="float: left">Отмена</a></span>
+            <span><a href="{% url 'dashboard' %}" style="float: left">Отмена</a></span>
             <span><button class="btn btn-sm btn-success" style="" type="submit" form="edit_debt_form">Сохранить
                 </button>
             </span>
