--- a/templates/debt_manager/debt_manager_card.html
+++ b/templates/debt_manager/debt_manager_card.html
@@ -5,6 +5,7 @@
     <div class="card-body p-1">
         {% for debtor in debtor_list %}
             <div class="my-1 p-1"
+                 onclick="location.href = '/debts/personal_debt/?debtor_id={{ debtor.id }}'"
                  style="border: solid #868383 1px; border-radius: 5px">
 
             <p style="font-size: 12pt" class="m-0">
@@ -14,9 +15,11 @@
             {% for debt in debtor.debts %}
                 <p style="font-size: 10pt; {% if debt.date_end < TODAY %} color: red {% endif %}" 
                    class="m-0">
-                    <span style="text-decoration-line: underline; font-size: 12pt;">{{ debt.amount }}</span>
+                    <a href="{% url 'edit_debt' %}?debt_id={{ debt.id }}">
+                        <span style="font-size: 12pt; color: black; {% if debt.date_end < TODAY %} color: red; {% endif %}">{{ debt.amount }}</span>
+                    </a>
                     <span style="font-weight: bolder">{{ debt.currency }}</span>
-                    <span style="float: right">{{ debt.date_end }}</span>
+                    <span style="float: right">{% if debt.date_end %}{{ debt.date_end }}{% endif %}</span>
                 </p>
             {% endfor %}
 
