--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,6 @@
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"
         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 <script src="{% static 'js/masonry.pkgd.min.js' %}" type="text/javascript"></script>
-<script src="{% static 'js/main.js' %}" type="text/javascript"></script>
+<script src="{% static 'js/main.js' %}" type="application/javascript"></script>
 </body>
 </html>
