--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300&display=swap" rel="stylesheet">
-        <link href="{% static 'css/main.css' %}" rel="stylesheet" type="text/css">
+        <link type="text/css" href="{% static 'css/main.css' %}" rel="stylesheet">
 </head>
 <body>
 {% block body %}{% endblock %}
@@ -18,7 +18,7 @@
         crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"
         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-<script src="{% static 'js/masonry.pkgd.min.js' %}" type="text/javascript"></script>
-<script src="{% static 'js/main.js' %}" type="application/javascript"></script>
+<script type="application/javascript" src="{% static 'js/masonry.pkgd.min.js' %}"></script>
+<script type="application/javascript" src="{% static 'js/main.js' %}" ></script>
 </body>
 </html>
