added bells card

--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -8,6 +8,7 @@
 
         <div id="applications_container" class="position-relative translate-middle-x start-50">
             {% include 'debt_manager/debt_manager_card.html' %}
+            {% include 'bills/bills_card.html' %}
         </div>
 
     </div>
