--- a/templates/bills/bills_card.html
+++ b/templates/bills/bills_card.html
@@ -27,7 +27,9 @@
         {% endif %}
 
         {% if cold_water_list %}
-            <div class="my-1 p-1" style="border: solid #868383 1px; border-radius: 5px">
+            <div class="my-1 p-1" style="border: solid #868383 1px; border-radius: 5px"
+                 onclick="window.location.href='{% url 'edit_cold_water' %}'">
+
                 {% for cold_water in cold_water_list %}
                     {% ifchanged %}
                         <p style="font-size: 12pt" class="m-0"><span>{{ cold_water.title }}</span></p>
@@ -35,12 +37,17 @@
 
                     <p style="font-size: 10pt;"
                        class="m-0">
-                        <span style="font-size: 12pt; color: black;">{{ cold_water.indications }}</span>
-                        {#                    <span class="ms-2" style="font-weight: bolder">{{ cold_water.amount }} руб.</span>#}
+                        <span style="font-size: 12pt; color: black;">{{ cold_water.indications }} кВт\ч</span>
+                        <span class="ms-2" style="font-weight: bolder">{{ cold_water.amount }} руб.</span>
                         <span style="float: right">{{ cold_water.payment_date }}</span>
-                    </p>
+                    </p>                    
 
                 {% endfor %}
+            </div>
+        {% else %}
+            <div class="my-1 p-1" style="border: solid #868383 1px; border-radius: 5px"
+                 onclick="window.location.href='{% url 'edit_cold_water' %}'">
+                <p style="font-size: 12pt" class="m-0"><span>Холодная вода</span></p>
             </div>
         {% endif %}
         {% if hot_water_list %}
