--- a/templates/bills/bills_card.html
+++ b/templates/bills/bills_card.html
@@ -38,7 +38,7 @@
 
                     <p style="font-size: 10pt;"
                        class="m-0">
-                        <span style="font-size: 12pt; color: black;">{{ cold_water.indications }} кВт\ч</span>
+                        <span style="font-size: 12pt; color: black;">{{ cold_water.indications }} M<sup><small>3</small></sup></span>
                         <span class="ms-2" style="font-weight: bolder">{{ cold_water.amount }} руб.</span>
                         <span style="float: right">{{ cold_water.payment_date }}</span>
                     </p>                    
@@ -63,7 +63,7 @@
 
                     <p style="font-size: 10pt;"
                        class="m-0">
-                        <span style="font-size: 12pt; color: black;">{{ hot_water.indications }} кВт\ч</span>
+                        <span style="font-size: 12pt; color: black;">{{ hot_water.indications }} M<sup><small>3</small></sup></span>
                         <span class="ms-2" style="font-weight: bolder">{{ hot_water.amount }} руб.</span>
                         <span style="float: right">{{ hot_water.payment_date }}</span>
                     </p>                    
