--- a/templates/bills/edit_hot_water.html
+++ b/templates/bills/edit_hot_water.html
@@ -6,9 +6,9 @@
         
             <div class="m-2 me-2">
                 <label>Тариф
-                    <input class="form-control" name="rate" type="number" min="0" max="1" step="0.0001" value="{{ rate }}"/>
+                    <input class="form-control" name="rate" type="number" min="0" step="0.0001" value="{{ rate }}"/>
                 </label>
-                <label class="">Израсходовано кубов
+                <label class="">Израсходовано M<sup><small>3</small></sup>
                     <input class="form-control border border-info" name="indications_diff" type="number" readonly 
                            value="{{ indications_diff }}"/>
                 </label>      
